<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.grooveberry.ConnectActivity" >
    
    <ImageButton
        android:id="@+id/wifiDisconnectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="211dp"
        android:layout_toRightOf="@+id/wifiConnectButton"
        android:layout_toEndOf="@+id/wifiConnectButton"
        android:contentDescription="@string/wifiDisconnectButtonDesc"
        android:src="@drawable/ic_tab_connect_wifi_unselected" />

    <TextView
        android:id="@+id/connectionStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wifiConnectButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/connectionStatus"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageButton
        android:id="@+id/wifiConnectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/wifiDisconnectButton"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp"
        android:contentDescription="@string/wifiConnectButtonDesc"
        android:src="@drawable/ic_tab_connect_wifi_selected" />

</RelativeLayout>
